Edited index file to include chapter4.Rmd file in the diary page

--- a/index.Rmd
+++ b/index.Rmd
@@ -33,11 +33,11 @@ output:
 
 ***
 
-<!-- ```{r child = "chapter4.Rmd"} -->
-<!-- # This will include Chapter 4 (that is updated in its own file) in the document. -->
-<!-- ``` -->
+```{r child = "chapter4.Rmd"}
+# This will include Chapter 4 (that is updated in its own file) in the document.
+```
 
-<!-- *** -->
+***
 
 <!-- ```{r child = "chapter5.Rmd"} -->
 <!-- # This will include Chapter 5 (that is updated in its own file) in the document. -->
