Updated the file to inlcude chapter 5

--- a/index.Rmd
+++ b/index.Rmd
@@ -39,11 +39,11 @@ output:
 
 ***
 
-<!-- ```{r child = "chapter5.Rmd"} -->
-<!-- # This will include Chapter 5 (that is updated in its own file) in the document. -->
-<!-- ``` -->
+```{r child = "chapter5.Rmd"}
+# This will include Chapter 5 (that is updated in its own file) in the document.
+```
 
-<!-- *** -->
+***
 
 <!-- ```{r child = "chapter6.Rmd"} -->
 <!-- # This will include Chapter 6 (that is updated in its own file) in the document. -->
