--- a/index.Rmd
+++ b/index.Rmd
@@ -45,11 +45,11 @@ output:
 
 ***
 
-<!-- ```{r child = "chapter6.Rmd"} -->
-<!-- # This will include Chapter 6 (that is updated in its own file) in the document. -->
-<!-- ``` -->
+```{r child = "chapter6.Rmd"}
+# This will include Chapter 6 (that is updated in its own file) in the document.
+```
 
-<!-- *** -->
+***
 
 (more chapters to be added similarly as we proceed with the course!)
 
