Commented the view function to make knitting the diary page more fluent

--- a/chapter5.Rmd
+++ b/chapter5.Rmd
@@ -96,7 +96,7 @@ tea <- read.csv("https://raw.githubusercontent.com/KimmoVehkalahti/Helsinki-Open
 
 # Explore the data
 str(tea)
-View(tea)
+#View(tea)
 
 # Drop 'age' out since there is already factorized age groups in the data
 tea <- dplyr::select(tea, -age)
