Updated the diary page file and knitted the html page

--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ output:
   html_document:
     theme: cosmo
     toc: true
-    toc_depth: 2
+    toc_depth: 3
     fig_caption: true
     fig_width: 6
     fig_height: 4
@@ -51,5 +51,5 @@ output:
 
 ***
 
-(more chapters to be added similarly as we proceed with the course!)
+# The END!
 
