--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -4,7 +4,12 @@
 
 ```{r, message=FALSE}
 # Load the necessary libraries
-#library()
+library(tidyverse)
+library(dplyr)
+library(ggplot2)
+library(tidyr)
+library(patchwork)
+library(lme4)
 ```
 
 
@@ -13,11 +18,243 @@
 #### Read the data into a variable and explore the contents
 
 ```{r}
-# Read the data from local .csv file and include the row names
-
+# Read 'BPRS' data
+BPRS <- read.table("data/BPRSL.csv", sep = ",", header = T)
 
 # Print the overview of the data
-#str()
-#head()
-#summary()
+str(BPRS)
+head(BPRS, 10)
+summary(BPRS)
 ```
+
+The 'BPRS' data set contains data of 40 male subjects assigned to two different treatment groups. All subjects were rated on a brief psychiatric rating scale (BPRS) about 18 symptoms related to schizophrenia. The rating scales from one (not present) to seven (extremely sever). The subjects were rated weekly, starting from week 0 and ending on week 8. The sum of the ratings are listed in the 'bprs' column. The minimum possible value is 18, and the maximum possible value is 126. 
+
+```{r}
+# Read in 'RATS' data
+RATS <- read.table("data/RATSL.csv", sep = ",", header = T)
+
+# Print the overview of the data
+str(RATS)
+head(RATS, 10)
+summary(RATS)
+```
+
+'RATS' data set contains data from a nutrition study conducted on rats of three different groups specified in the 'group' variable. All groups are on different diets. Each rat's body weight ('Weight') was recorded on certain time periods (approx. weekly), shown in the 'Time' variable, ranging from day 1 to day 64. Total of 16 rats were investigated shown by the rat identification numbers in the column 'ID'.
+
+### Analysis of the 'RATS' data
+
+```{r}
+# Factorize the categorical variables
+RATS$ID <- factor(RATS$ID)
+RATS$Group <- factor(RATS$Group)
+
+# Remove unnecessary variables
+RATS <- dplyr::select(RATS, -WD)
+```
+
+#### Individual rat weight development
+
+```{r}
+# Draw the plot on unstandardized data
+ggplot(RATS, aes(x = Time, y = Weight, linetype = ID, col = ID)) +
+  geom_line() +
+  scale_linetype_manual(values = 1:16) +
+  facet_grid(. ~ Group, labeller = label_both)
+```
+
+```{r}
+# Add standardized weight variable to the data
+RATS <- RATS %>% 
+  group_by(Time) %>% 
+  mutate(stdweight = scale(Weight)) %>% 
+  ungroup()
+
+# Draw the plot on unstandardized data
+ggplot(RATS, aes(x = Time, y = stdweight, linetype = ID, col = ID)) +
+  geom_line() +
+  scale_linetype_manual(values = 1:16) +
+  facet_grid(. ~ Group, labeller = label_both)
+```
+
+Tracking phenomenom can be seen in this data set in both plots above. The rats with higher starting weight have higher weights at the end also. Observing the development of the weights in the second plot with the scaled data, one can differentiate the rats that gained relatively more weight to other rats better until each specific time of measurement. The first plots better highlights the actual development of the weights of each studied rat. The increase in weight seems to be highest in group 2 and lowest in group 1
+
+#### Summary graph of weight development
+
+```{r}
+# Summary data with mean and standard error of Weight by Group and Time 
+RATSS <- RATS %>%
+  group_by(Group, Time) %>%
+  summarise(mean = mean(Weight), se = sd(Weight) / sqrt(length(Weight))) %>%
+  ungroup()
+
+head(RATSS, 30) # Weight observations of each three groups in 11 different times.
+
+ggplot(RATSS, aes(x = Time, y = mean, linetype = Group, shape = Group)) +
+  geom_line() +
+  scale_linetype_manual(values = 1:3) +
+  geom_point(size=3) +
+  scale_shape_manual(values = c(1,2,5)) +
+  geom_errorbar(aes(ymin=mean-se, ymax=mean+se, linetype="1"), width=0.3) +
+  theme(legend.position = c(0.9,0.5)) +
+  scale_y_continuous(name = "mean(Weight) +/- se(Weight)")
+```
+
+The difference in the amount of observations can immediately be seen on the sizes of the standard errors. Group 1 has most observations and thus the error is small. Comparing the trends of each group, my previous thought seem to be true about the order of weight development between the groups. The slope of the line in group 1 is smallest and highest in group 2.
+
+#### Development of the mean weight
+
+```{r, message=FALSE}
+# Summary data by Group and ID with mean as the summary variable
+RATSM <- RATS %>%
+  group_by(Group, ID) %>%
+  summarise(mean=mean(Weight)) %>%
+  ungroup()
+
+# Look at the data
+RATSM
+
+# Draw a boxplots of the mean versus Group
+p1 <- ggplot(filter(RATSM, Group == 1), aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  stat_summary(fun = "mean", geom = "point", shape=23, size=4, fill = "white") +
+  scale_y_continuous(name = "mean(Weight)")
+p2 <- ggplot(filter(RATSM, Group == 2), aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  stat_summary(fun = "mean", geom = "point", shape=23, size=4, fill = "white") +
+  scale_y_continuous(name = element_blank())
+p3 <- ggplot(filter(RATSM, Group == 3), aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  stat_summary(fun = "mean", geom = "point", shape=23, size=4, fill = "white") +
+  scale_y_continuous(name = element_blank())
+
+p1 + p2 + p3
+
+# Create new data by filtering the outliers and adjust the ggplot code the draw the plot again with the new data
+RATSM1 <- filter(RATSM, mean < 550, ! between(mean, 490, 500), mean > 240)
+RATSM1
+
+# Draw a boxplots of the mean versus Group
+p1 <- ggplot(filter(RATSM1, Group == 1), aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  stat_summary(fun = "mean", geom = "point", shape=23, size=4, fill = "white") +
+  scale_y_continuous(name = "mean(Weight)")
+p2 <- ggplot(filter(RATSM1, Group == 2), aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  stat_summary(fun = "mean", geom = "point", shape=23, size=4, fill = "white") +
+  scale_y_continuous(name = element_blank())
+p3 <- ggplot(filter(RATSM1, Group == 3), aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  stat_summary(fun = "mean", geom = "point", shape=23, size=4, fill = "white") +
+  scale_y_continuous(name = element_blank())
+
+p1 + p2 + p3
+```
+
+The amount of observations are so low that it's hard not to have the distribution be skewed. Nevertheless, group 2 has left-skewed distribution and groups 1 and 3 right-skewed of weight. The skewness flipped for each group after removing the outliers, meaning that it's very volatile. 
+
+Because observations are in different scales, there is no point comparing the similarities as was done for the BPRS data with t-tests in the exercises.
+
+
+
+### Analysis of the 'BPRS' data
+
+```{r}
+# Factorize the categorical variables
+BPRS$treatment <- factor(BPRS$treatment)
+BPRS$subject <- factor(BPRS$subject)
+
+# Remove unnecessary variables
+BPRS <- dplyr::select(BPRS, -weeks)
+
+# Look at the data
+head(BPRS, 10)
+```
+
+#### Plot the data
+
+```{r}
+# Plot bprs against week
+ggplot(BPRS, aes(x = week, y = bprs, group = subject, col = subject)) +
+  geom_line(aes(linetype = subject)) +
+  scale_linetype_manual(values = 1:20) +
+  facet_grid(. ~ treatment, labeller = label_both) +
+  scale_x_continuous(name = "Time (weeks)") +
+  scale_y_continuous(name = "BPRS (sum of rating)") +
+  theme(legend.position = "top")
+
+```
+
+The overall bprs score seem to go down during the treatment in both treatment groups. The variability seems, however, be more erratic in the treatment group 2, whereas in group 1 the bprs lines align a bit better and the slope resembles more of a line and not a parabolic curve.
+
+#### Fit regression model to the data
+
+```{r}
+# Fit the model
+BPRS_reg <- lm(bprs ~ week + treatment, data = BPRS)
+
+summary(BPRS_reg)
+```
+
+As can be seen in the summary, with p-value of 0.661, the treatment variable is not significant and does not explain change in bprs score. 'week' on the other hand explains a change in bprs in a significant level. R-squared value being ~0.18 shows that the model does indeed have some explanatory significance.
+
+#### Explore the data taking the dependance of the repeated observations into account
+
+```{r}
+# Create a random intercept model accounting for each individual differences in the person's bprs development by including
+# random variance in the intercept
+BPRS_ref <- lmer(bprs ~ week + treatment + (1 | subject), data = BPRS, REML = FALSE)
+
+# Print the summary of the model
+summary(BPRS_ref)
+```
+
+The random effect between individuals has effect on the model as can be seen by the 'subject' random effect variance being non-zero. In this random intercept model the standard errors are smaller than in the regular model for the coefficients 'week' (0.2524 vs 0.2084) and 'treatment' (1.3034 vs 1.0761). 
+
+```{r}
+# Random intercept and slope model accounting for the variance in the effect of time also
+BPRS_ref1 <- lmer(bprs ~ week + treatment + (week | subject), data = BPRS, REML = FALSE)
+
+# Print the summary of the model
+summary(BPRS_ref1)
+
+# Perform Anova test
+anova(BPRS_ref1, BPRS_ref)
+```
+
+In this model the variance is a bit larger (64.8222 vs 47.41) than in the previous random intercept model. The variance for the random effect in 'week' variables is relatively small (0.9609). 
+The p-value in the anova test shows that the model with the added random slope effect is better than the simpler model being significant in the Anova test at the 5% level.
+
+```{r}
+# Random intercept and random slope model with 'week' to 'treatment' interaction
+BPRS_ref2 <- lmer(bprs ~ week*treatment + (week | subject), data = BPRS, REML = FALSE)
+
+# Print the summary of the model
+summary(BPRS_ref2)
+
+# Perform Anova test
+anova(BPRS_ref2, BPRS_ref1)
+
+# Create vector of the fitted values and add it to the data set
+Fitted <- fitted(BPRS_ref2)
+BPRS <- BPRS %>% 
+  mutate(fitted = Fitted)
+
+# Plot bprs against week for both observed and fitted values
+ggplot(BPRS, aes(x = week, y = bprs, group = subject, col = subject)) +
+  geom_line(aes(linetype = subject)) +
+  scale_linetype_manual(values = 1:20) +
+  facet_grid(. ~ treatment, labeller = label_both) +
+  scale_x_continuous(name = "Time (weeks)") +
+  scale_y_continuous(name = "Observed BPRS") +
+  theme(legend.position = "top")
+
+ggplot(BPRS, aes(x = week, y = fitted, group = subject, col = subject)) +
+  geom_line(aes(linetype = subject)) +
+  scale_linetype_manual(values = 1:20) +
+  facet_grid(. ~ treatment, labeller = label_both) +
+  scale_x_continuous(name = "Time (weeks)") +
+  scale_y_continuous(name = "Fitted BPRS") +
+  theme(legend.position = "top")
+```
+
+The model with 'week' to 'treatment' interaction has better fit compared to the previous model based on the p-value in the Anova test being significant at 10% level. Compared to the plot with observed values the plots with fitted values show clear downward trend in the bprs scores. The slope seem to be slightly deeper in treatment group 1 meaning that in group 1 the symptoms were decreasing a bit faster.
